--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="mobile-web-app-capable" content="yes">
       <meta name="description" content="Page Description">
       <meta name="author" content="Afolabi mayowa">
-      <title>Shopping card calculator</title>      
+      <title>Наебатор v.1.0</title>      
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/main.css" rel="stylesheet">
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
