--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <div class="form-group">
             <input type="number" class="form-control input-lg" name="" id="itemInput" >
          </div>
-         <button id="addButton" class="btn btn-lg btn-primary btn-block">Добавить</button>
+         <button id="addButton" style="display: none;" class="btn btn-lg btn-primary btn-block">Добавить</button>
          
          <ul id="todoList"></ul>
          <button id="clearButton" class="btn btn-lg btn-block btn-danger">Очистить</button>
